feat(html) : changement caroussel

--- a/indexFr.html
+++ b/indexFr.html
@@ -99,7 +99,7 @@
                 <div class="carousel-item">
                     <img src="image/surf.jpg" alt="marche">
                     <div class="carousel-caption">
-                        <h3>Un gain de temps exceptionnel ! </h3>
+                        <h3>Réussi !  </h3>
                     </div>
                 </div>
             </div>
